; ModuleID = '/home/carl/AnghaBench/postgres/src/backend/access/table/extr_tableam.c_table_index_fetch_tuple_check.c'
source_filename = "/home/carl/AnghaBench/postgres/src/backend/access/table/extr_tableam.c_table_index_fetch_tuple_check.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @table_index_fetch_tuple_check(i32 %0, i32 %1, i32 %2, i32* %3) #0 {
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca i32*, align 8
  %9 = alloca i32*, align 8
  %10 = alloca i32*, align 8
  %11 = alloca i32, align 4
  %12 = alloca i32, align 4
  store i32 %0, i32* %5, align 4
  store i32 %1, i32* %6, align 4
  store i32 %2, i32* %7, align 4
  store i32* %3, i32** %8, align 8
  store i32 0, i32* %11, align 4
  %13 = load i32, i32* %5, align 4
  %14 = call i32* @table_slot_create(i32 %13, i32* null)
  store i32* %14, i32** %10, align 8
  %15 = load i32, i32* %5, align 4
  %16 = call i32* @table_index_fetch_begin(i32 %15)
  store i32* %16, i32** %9, align 8
  %17 = load i32*, i32** %9, align 8
  %18 = load i32, i32* %6, align 4
  %19 = load i32, i32* %7, align 4
  %20 = load i32*, i32** %10, align 8
  %21 = load i32*, i32** %8, align 8
  %22 = call i32 @table_index_fetch_tuple(i32* %17, i32 %18, i32 %19, i32* %20, i32* %11, i32* %21)
  store i32 %22, i32* %12, align 4
  %23 = load i32*, i32** %9, align 8
  %24 = call i32 @table_index_fetch_end(i32* %23)
  %25 = load i32*, i32** %10, align 8
  %26 = call i32 @ExecDropSingleTupleTableSlot(i32* %25)
  %27 = load i32, i32* %12, align 4
  ret i32 %27
}

declare dso_local i32* @table_slot_create(i32, i32*) #1

declare dso_local i32* @table_index_fetch_begin(i32) #1

declare dso_local i32 @table_index_fetch_tuple(i32*, i32, i32, i32*, i32*, i32*) #1

declare dso_local i32 @table_index_fetch_end(i32*) #1

declare dso_local i32 @ExecDropSingleTupleTableSlot(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
